welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: not found: value nbPas
        while ( nbPas=0) {recule(); nbPas=nbPas-1}
                ^Methods:6: error: not found: value nbPas
        while ( nbPas=0) {recule(); nbPas=nbPas-1}
                                    ^